--- a/crowdFunding/projects/templates/projects/create.html
+++ b/crowdFunding/projects/templates/projects/create.html
@@ -34,7 +34,7 @@
 
   <br><br>
 {% block js %}
-<script type="text/javascript" src="{% static 'js/bootstrap-tagsinput.js' %}"></script>
+<script src="https://github.com/bootstrap-tagsinput/bootstrap-tagsinput.git"></script>
 {% endblock %}
 
 
