--- a/crowdFunding/users/templates/users/base.html
+++ b/crowdFunding/users/templates/users/base.html
@@ -37,11 +37,33 @@
       href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
     />
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'users/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <!-- Material Design Bootstrap -->
-    <link href="{% static 'users/css/mdb.min.css' %}" rel="stylesheet" />
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
+      rel="stylesheet"
+    />
     <!-- Your custom styles (optional) -->
-    <link href="{% static 'users/css/style.min.css' %}" rel="stylesheet" />
+    <link
+      href="https://codebeautify.org/css-beautify-minify?url=https://gist.githubusercontent.com/cbmgit/40dab03300cf86aa0ddce5c552fdc501/raw/example.css"
+      rel="stylesheet"
+    />
 
     <meta charset="UTF-8" />
     <title>{% block title %} Home {% endblock title %}</title>
